[tool.poetry]
name = "horizons-api"
version = "0.1.6"
description = "A FastAPI Web Service to return results from a Horizons Ephemerides search."
authors = ["alevan <levan.andrew.w@gmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "home"
url = "http://pypi.home/"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.70.0"
uvicorn = ">=0.15.0"
gunicorn = ">=20.1.0"
aiohttp = ">=3.7.4.post0"
horizons_client = "^0.1.1"
humps = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-freezegun = "0.4.2"
pytest-asyncio = "0.16.0"
pylint = "2.12.2"
black = "22.3.0"
pre-commit = "2.16.0"
click = "8.0.2"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
